--- a/src/main/resources/assets/moxplore/lang/en_us.json
+++ b/src/main/resources/assets/moxplore/lang/en_us.json
@@ -3,6 +3,7 @@
 "item.moxplore.copper_axe":"Copper Axe",
 "item.moxplore.copper_shovel":"Copper Shovel",
 "item.moxplore.copper_sword":"Copper Sword",
+"item.moxplore.copper_hoe":"Copper Hoe",
 "block.moxplore.downstone":"Downstone",
 "block.moxplore.down_grass":"Down Grass"
 }
